[gd_scene load_steps=2 format=3 uid="uid://il7vk017yugx"]

[ext_resource type="Script" path="res://main.gd" id="1"]

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.18, 1)

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitlePanel" type="PanelContainer" parent="MainContainer/VBoxContainer"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MainContainer/VBoxContainer/TitlePanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MainContainer/VBoxContainer/TitlePanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "LEADERBOARD - TOP 5"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="MainContainer/VBoxContainer/TitlePanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "Connecting..."
horizontal_alignment = 1

[node name="LeaderboardPanel" type="PanelContainer" parent="MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/VBoxContainer/LeaderboardPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="PlayerList" type="VBoxContainer" parent="MainContainer/VBoxContainer/LeaderboardPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
